--- a/lovable/package.json
+++ b/lovable/package.json
@@ -11,8 +11,8 @@
     "deploy-sandbox": "cd blaxel-custom-sandbox && bl deploy"
   },
   "dependencies": {
-    "@anthropic-ai/claude-code": "^1.0.39",
-    "@blaxel/core": "^0.2.30",
+    "@blaxel/core": "^0.2.46",
+    "@monaco-editor/react": "^4.6.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
