--- a/coval/Dockerfile
+++ b/coval/Dockerfile
@@ -21,20 +21,29 @@ FROM node:20-alpine AS runner
 
 WORKDIR /app
 
-# Set environment to production
-ENV NODE_ENV=production
+RUN apk update && apk add --no-cache \
+  nginx nginx-mod-http-perl && \
+  rm -rf /var/cache/apk/* && \
+  mkdir -p /run/nginx /var/log/nginx && \
+  chmod 755 /run/nginx && \
+  addgroup -g 1001 -S nodejs && \
+  adduser -S nextjs -u 1001 && \
+  chown -R nextjs:nodejs /app /run/nginx /var/log/nginx /var/lib/nginx /etc/nginx
 
-# Create a non-root user to run the app
-RUN addgroup -g 1001 -S nodejs
-RUN adduser -S nextjs -u 1001
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# Set environment to production
 
 # Copy built application from builder stage
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 # Switch to non-root user
-USER nextjs
 
-# Start the Next.js server
-# Use shell form to properly set environment variable with default fallback to port 3000
-CMD PORT=${BL_SERVER_PORT:-3000} node server.js
+COPY entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
+
+USER nextjs
+ENV NODE_ENV=production
+
+ENTRYPOINT ["/app/entrypoint.sh"]
