--- a/coval/package.json
+++ b/coval/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@blaxel/core": "^0.2.55",
     "@monaco-editor/react": "^4.6.0",
-    "next": "14.2.3",
+    "next": "^16.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.1.0",
