--- a/coval/package.json
+++ b/coval/package.json
@@ -11,7 +11,7 @@
     "deploy-sandbox": "cd blaxel-custom-sandbox && bl deploy"
   },
   "dependencies": {
-    "@blaxel/core": "^0.2.55",
+    "@blaxel/core": "latest",
     "@monaco-editor/react": "^4.6.0",
     "next": "^16.1.1",
     "react": "^18",
