--- a/pr-review-agent/package.json
+++ b/pr-review-agent/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "agent-mastra",
+  "name": "pr-review-agent",
   "version": "1.0.0",
-  "description": "Agent using Mastra",
+  "description": "Agent for reviewing pull requests",
   "main": "src/index.ts",
   "keywords": [],
   "license": "MIT",
@@ -14,20 +14,17 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.21",
-    "@blaxel/core": "0.2.55",
-    "@blaxel/mastra": "0.2.55",
-    "@blaxel/telemetry": "0.2.55",
-    "@mastra/core": "^0.6.4",
-    "ai": "^4.3.13",
-    "fastify": "^5.3.2",
-    "zod": "^3.24.4"
+    "@anthropic-ai/sdk": "^0.71.2",
+    "@blaxel/core": "0.2.60",
+    "@blaxel/telemetry": "0.2.60",
+    "@modelcontextprotocol/sdk": "^1.25.3",
+    "fastify": "^5.7.1",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.15.9",
-    "mastra": "^0.4.9",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.0.9",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
