--- a/pr-review-agent/package.json
+++ b/pr-review-agent/package.json
@@ -15,9 +15,9 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.21",
-    "@blaxel/core": "0.2.55",
-    "@blaxel/mastra": "0.2.55",
-    "@blaxel/telemetry": "0.2.55",
+    "@blaxel/core": "latest",
+    "@blaxel/mastra": "latest",
+    "@blaxel/telemetry": "latest",
     "@mastra/core": "^0.6.4",
     "ai": "^4.3.13",
     "fastify": "^5.3.2",
