--- a/coval/codegen-sandbox/Dockerfile
+++ b/coval/codegen-sandbox/Dockerfile
@@ -1,31 +1,22 @@
-FROM node:22-alpine
-
-WORKDIR /app
+FROM oven/bun:alpine
 
 RUN apk update && apk add --no-cache \
   git \
   curl \
   netcat-openbsd \
-  bash \
-  ttyd \
+  nodejs \
+  npm \
   && rm -rf /var/cache/apk/*
 
+WORKDIR /app
 
 COPY --from=ghcr.io/blaxel-ai/sandbox:latest /sandbox-api /usr/local/bin/sandbox-api
 
-RUN npx create-next-app@latest /app --use-npm --typescript --eslint --tailwind --src-dir --app --import-alias "@/*" --no-git --yes
+# Copy the pre-configured Astro app
+COPY ./app /app
 
-# Install Claude Agent SDK
-RUN npm install -g @anthropic-ai/claude-code
-
-# Copy and run the pre-warm script to build .next cache
-COPY prewarm-cache.sh /tmp/prewarm-cache.sh
-RUN chmod +x /tmp/prewarm-cache.sh && \
-    # Set timeout via environment variable (default 30s, can be overridden during build)
-    PREWARM_TIMEOUT=${PREWARM_TIMEOUT:-30} /tmp/prewarm-cache.sh || \
-    echo "Pre-warming completed (exit code: $?)" && \
-    # Clean up the temporary script
-    rm /tmp/prewarm-cache.sh
+# Install dependencies
+RUN bun install
 
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
