--- a/coval/codegen-sandbox/blaxel.toml
+++ b/coval/codegen-sandbox/blaxel.toml
@@ -3,10 +3,8 @@ type = "sandbox"
 [runtime]
 generation = "mk3"
 memory = 8192
+
 [[runtime.ports]]
-name = "nextjs-dev"
-target = 3000
+name = "astro-dev"
+target = 4321
 protocol = "HTTP"
-[[runtime.ports]]
-name = "ttyd"
-target = 12345
